Fixed some trait pill styles to make dark mode weapon mastery clearer.

--- a/src/less/quadrone/actors.less
+++ b/src/less/quadrone/actors.less
@@ -2896,5 +2896,9 @@
     .traits.list .pill:is(.physical-bypass) {
       border-color: var(--t5e-color-palette-orange-70);
     }
+
+    .trait-pill i {
+      color: var(--t5e-color-text-gold-emphasis);
+    }
   }
 }
